		  -p or -o in cas.
		* Changed cas to use getopt_long.
		* Added --config-dir and -c option to cas.
		* Added alias -H --html to cas.
		* Added alias -P --picture to cas.
		* Added --config-dir and -c option to ed2k.
		* Added --config-dir option to amuled.

	GonoszTopi:
		* Fixed linkage with wxMSW.
		* Got rid of a few more warnings.

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.

	Phoenix:
		* Upgraded extern/listctrl.{cpp,h} from wxWidgets cvs code.
		* Fixed some gtk2 warnings in extern/listctrl.cpp.
		* Fix for unhandled exception in new skinned toolbar code.
		* Coding style fixes.
		* Fix for server disconnection during global search.
		* No more wxARRAY's in amuleweb.
		* Fixed bug in mutex code in amuleweb (s_mutex_wcThreads).
		* No more wxARRAY's in aMule code.
		* Fixed bug in ECPacket.cpp: assignment inside assertion.
		* Changed CECSocket constructor to be exception safe.
		* Fix for invalid rectangle size on COScopeCtrl::PlotHistory().
		* Removed the default constructor for Kademlia contacts.
		* Fix for "get bwlimits" command in amulecmd always returning
		  zero for maximum download value.
		* Added UPnP support.
		* Fix for crash in ECSocket.cpp.

--------------------------------------------------------------------------------

Version 2.1.4 - The "So what? If it's new, it has to be good" version
----------
2006-06-11

	GonoszTopi:
		* Added ability to compile amulecmd without threading support.
		* Sed denoiser - removes excessive messages from compilation - 
		Thanks to Vollstrecker for the idea and discussions.
		* Proper restoration of startup locale after checking available
		locales.
		* Fixed source seeds handling on startup.

	Kry:
		* Fixed mldonkey_importer to work with mldonkey >= 2.7.6

	Phoenix:
		* Fix for crash in amulegui/DownloadListCtrl.cpp.

	Special Thanks to:
		* Mr Tyler Durden, for his words of wisdom.
